--- a/sextant/src/Banner.css
+++ b/sextant/src/Banner.css
@@ -4,8 +4,8 @@
     text-align: center;
     font-weight: bold;
     font-size: 1.75vw;
-    color: #002933;
-    background-color: #80e5ff;
-    border: 0.25vw solid #005266;
+    color: #912f09;
+    background-color: #ac7833;
+    border: 0.25vw solid #520101;
     border-radius: 2vw;
 }
