--- a/sextant/src/Exhibit.css
+++ b/sextant/src/Exhibit.css
@@ -3,9 +3,9 @@
     margin: 0.5vw;
     padding: 0vw 2vw 0vw 2vw;
     text-align: center;
-    color: #002933;
-    background-color: #00b8e6;
-    border: 0.25vw solid #005266;
+    color: #912f09;
+    background-color: #ac7833;
+    border: 0.25vw solid #520101;
     border-radius: 2vw;
 }
 
@@ -20,8 +20,8 @@
     text-align: center;
     font-weight: bold;
     font-size: 1.75vw;
-    color: #002933;
-    background-color: #80e5ff;
-    border: 0.25vw solid #005266;
+    color: #912f09;
+    background-color: #ac7833;
+    border: 0.25vw solid #520101;
     border-radius: 2vw;
 }
